# qt-conan2

./: .gitignore  CMakeLists.txt  README.md  TreeWidget.cpp  conanfile.py  main.cpp  main.py  pyproject.toml
source/: CMakeLists.txt  TreeWidget.hpp  main.cpp
